objects/ssot__ProductAttribute__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Attribute Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VariantParentId__c</fullName>
        <label>Variant Parent</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761215518_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductAttribute_ProductId_map_Produ_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProductAttribute_ProductId_map_Produ_rel</relationshipLabel>
        <relationshipName>rel_1697761215518_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761216269_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductAttribute_VariantParentId_map_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProductAttribute_VariantParentId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761216269_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>